--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@
 
 /* CSS */
 .button-74 {
-  background-color: #fbeee0;
+  background-color: #39CCCC/* #fbeee0*/;
   border: 2px solid #422800;
   border-radius: 30px;
   box-shadow: #422800 4px 4px 0 0;
@@ -151,7 +151,7 @@
 }
 
 .button-74:hover {
-  background-color: #fff;
+  background-color: #F012BE/*#fff*/;
 }
 
 .button-74:active {
@@ -165,3 +165,45 @@
     padding: 0 25px;
   }
 }
+
+/* CSS */
+.button-74-secondary {
+    background-color: #FF851B/* #fbeee0*/;
+    border: 2px solid #422800;
+    border-radius: 30px;
+    box-shadow: #422800 4px 4px 0 0;
+    color: #422800;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 18px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-74-secondary:hover {
+    background-color: #FFDC00/*#fff*/;
+  }
+  
+  .button-74-secondary:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-74-secondary {
+      min-width: 120px;
+      padding: 0 25px;
+    }
+  }
+  
+
+
+
+
+
