--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* FLEX DECLARATIONS */
 
 body {
-    background-image: url("./Art/twilightGradient.png");
+    background-image: url("./Art/crystalBackground.png");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -213,7 +213,7 @@ body {
     #screen {
       background-color: black;
       width: 45%;
-      min-height: 50px;
+      min-height: 65px;
       border-radius: 20px;
       border: solid grey/*#66FF66*/ 7px;
     }
@@ -233,8 +233,71 @@ body {
       text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
       */
       font-size: 72px;
-      background: -webkit-linear-gradient(pink, green);
+      background: -webkit-linear-gradient(pink, hotpink);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
   
+    }
+
+    #screenDisplay {
+        color: white;
+        font-family: 'Scientific Calculator LCD', sans-serif;
+    }
+
+    #screenContainer {
+        background: url("./Art/amethystHorizontal.png") no-repeat center; 
+        background-size: contain;
+        width: 1000px;
+        border-radius: 200px;
+    }
+
+    .end {
+        justify-content: flex-end;
+    }
+
+    .gemButton {
+        max-width: 70px;;
+    }
+
+    .gemButtonClass {
+        /*background: url("./Art/1x/GemsAsset 2.png") no-repeat center; */
+        background-size: contain;
+        border: none;
+        width: 100px;
+        height: 100px;
+        /*font-size: 200%;*/
+        position: relative; 
+        transition: all .2s ease-in-out;    
+    }
+
+    .gemButtonClass:hover {
+        transform: scale(1.2);
+    }
+
+    .gemButton {
+        height: 100px;
+        width: 100px;
+        display: block;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        font-family: lobster;    
+    }
+
+    .gemButtonText {
+        height: 75px;
+        width: 75px;
+        display: block;
+        margin: 0;
+        position: absolute;
+        top: 70%;
+        right: 0%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        font-family: lobster;
+        font-size: 150%;
+        z-index: 0;
     }
