--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
       text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
       */
       font-size: 72px;
-      background: -webkit-linear-gradient(pink, hotpink);
+      background: -webkit-linear-gradient(blue, skyblue);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
   
