--- a/style.css
+++ b/style.css
@@ -6,10 +6,23 @@
 
 body {
     background-image: url("./Art/crystalBackground.png");
+    /*
     height: 100%;
+    */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .fitViewBody {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .fitViewDiv {
+    width: 100%;
+    height: 100%;
   }
   
   .wrapper {
@@ -40,6 +53,10 @@ body {
   
   .justifyContentCenter { /* this positions along the main axis */
       justify-content: center;
+  }
+
+  .justifyContentEnd {
+    justify-content: baseline;
   }
   
   .alignSpaceEvenly {
@@ -132,8 +149,8 @@ body {
   }
 
   .paddedMajor {
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 5%;
+    padding-right: 5%;
   }
   
   /*
@@ -228,52 +245,73 @@ body {
         justify-content: center;
         align-items: center;
         height: 200px;
-        border: 3px solid green;
     }
-
-    #buttonGrid {
-        width: 100%;
+ 
+    #screenAndButtons {
+        padding-right: 2vw;
+        padding-left: 2vw;
+        align-items:center;
+        height: 95%;
     }
 
     #screenContainer {
-        background: url("./Art/1x/GemsCrystalz.png") no-repeat center; 
-        background-size: contain;
+        background: url("./Art/1x/thinBlue.png") no-repeat center; 
+        background-size: cover;
         width: 80%;
-        /*margin: 100px;*/
-        padding-top: 17%;
-        padding-bottom: 17%;
+        min-width: 70%;
+        height: 10vh;
+        /*
+        padding-top: 5%;
+        padding-bottom: 5%;
         padding-right: 10%;
         padding-left: 10%;
+        */
     }
   
     #screen {
       background-color: black;
-      width: 100%;
-      height: 20px;
+      width: 50%;
+      height: 60%;
       border-radius: 20px;
-      border: solid lightskyblue/*#66FF66*/ 7px;
+      border: solid skyblue 5px;
     }
-  
-    #screenAndButtons {
-      height: 50%;
-
-    }
-
 
     #screenDisplay {
         color: white;
-        font-family: 'Scientific Calculator LCD', sans-serif;
+        font-family: 'Scientific Calculator LCD', sans-serif;      
     }
 
+    /*The entire button section*/
+    #buttonGrid {
+        display: flex column;
+        justify-content:center;
+        width: 80%;
+        min-width: 70%;
+        height: 70vh;
+        margin-top: 2vh;
+    }
 
-    
+    /*Each row of buttons*/
+    #buttonDiv {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-self:flex-end;
+        /*
+        height: 8vh;
+        margin: 4vh;
+        */
+        margin: 1%;
+        height: 18%;
+    }
+
     #title {
         /*
       font-size: 90px;
       color: silver;
       text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
       */
-      font-size: 50px;
+      font-size: 35px;
       background: -webkit-linear-gradient(blue, skyblue);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -293,11 +331,11 @@ body {
         /*background: url("./Art/1x/GemsAsset 2.png") no-repeat center; */
         background-size: contain;
         border: none;
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        height: 100%;
         /*font-size: 200%;*/
         position: relative; 
-        transition: all .2s ease-in-out;    
+        transition: all .2s ease-in-out;  
     }
 
     .gemButtonClass:hover {
@@ -309,19 +347,17 @@ body {
     }
 
     .gemButton {
-        height: 100px;
-        width: 100px;
+        width: 100%;
+        height: 100%;
         display: block;
-        margin: 0;
         position: absolute;
+        margin: 0;
         top: 50%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
         font-family: lobster;    
     }
-
-    
 
 .hoverFadeIn {
     opacity: 0;
@@ -336,18 +372,21 @@ body {
     }
 */
     .gemButtonText {
-        height: 75px;
-        width: 75px;
+        height: 40px;
+        width: 40px;
+
+
         display: block;
-        margin: 0;
-        position: absolute;
-        top: 70%;
-        right: 0%;
+        margin: auto;
+        
+        top: 50%;
+        left: 57%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
         font-family: lobster;
         font-size: 150%;
-        z-index: 0;
+        position: absolute;
+        z-index: 3;
     }
 
 
