--- a/style.css
+++ b/style.css
@@ -255,8 +255,8 @@ body {
     }
 
     #screenContainer {
-        background: url("./Art/1x/thinBlue.png") no-repeat center; 
-        background-size: cover;
+        /*background: url("./Art/gemmyBG.svg") no-repeat center;*/
+        background-size: 80% 80%;
         width: 80%;
         min-width: 70%;
         height: 9vh;
